# Specter

./: .eslintrc.json  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
src/: auth.rs  cache.rs  client.rs  error.rs  main.rs  metrics.rs  proxy.rs
src/client/: req.rs
ui/: package-lock.json  package.json
ui/.github/workflows/: build.yml
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/api/proxy/: route.ts
ui/app/contact/: Contact.tsx  page.tsx
ui/app/faq/: FAQ.tsx  page.tsx
ui/app/web/: page.tsx
ui/components/Features/: index.tsx
ui/components/Footer/: index.tsx
ui/components/Hero/: index.tsx
ui/components/Landing/: index.tsx
ui/components/Navbar/: HoveredLink.tsx  Logo.tsx  MenuItem.tsx  index.tsx
ui/components/Proxy/: index.tsx
ui/components/Stats/: index.tsx
ui/components/Testmonials/: index.tsx
ui/components/Trusted-Section/: index.tsx
ui/components/WorkSection/: index.tsx
