[package]
name = "rust"
version = "0.1.0"
edition = "2021"
default-run = "rust"

[package.metadata]
default-run = "rust"

[[bin]]
name = "rust"   
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }  
log = "0.4"    
tracing = "0.1"
tokio-native-tls = "0.3"
native-tls = "0.2"
clap = { version = "4.0", features = ["derive"] } 
